src/objects/EW_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EW Farmers</relationshipLabel>
        <relationshipName>EW_Farmers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Crops__c</fullName>
        <label>Crops</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Status__c</fullName>
        <label>Household Status</label>
        <picklist>
            <picklistValues>
                <fullName>Man as head of household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woman as head of household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child as head of household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Information_Needs__c</fullName>
        <label>Information Needs</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Land_Size__c</fullName>
        <label>Land Size</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registered By</label>
        <referenceTo>VKW__c</referenceTo>
        <relationshipLabel>EW Farmers</relationshipLabel>
        <relationshipName>EW_Farmers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registered_Date__c</fullName>
        <label>Registered Date</label>
        <type>Date</type>
    </fields>
    <label>EW Farmer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EW Farmer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EW Farmers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>